--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@strapi/plugin-cloud": "5.10.3",
     "@strapi/plugin-users-permissions": "5.10.3",
     "@strapi/strapi": "5.10.3",
+    "my-strapi-plugin": "file:.yalc/my-strapi-plugin",
     "pg": "8.8.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
